j--/tests/pass/Less.java
package pass;

public class Less {
	
	public boolean less(int a, int b) {
		return a < b;
	}

}
