j--/tests/fail/Less.java
package fail;

public class Less {

	public static void main(String[] args) {
		System.out.println("coucou" < 2);
	}

}
